# aethermesh-core

./: .gitignore  .gitleaksignore  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
desktop/: electron-builder.json  package.json
docs/: architecture.md  capability-record-schema.md  contribution-record-schema.md  expert-manifest-v0.md  local-api-schema-v1.json  local-api-schema-v1.md  local-audit-event-schema.md  local-node-identity.md  local-node-lifecycle.md  persistent-goal.md  phase-1-api-schema-contract.json  phase-1-api-schema-contract.md  phase-1-api-schema-stability.md  phase-1-job-envelope-schema.md  phase-1-job-failure-schema.md  phase-1-job-result-schema.md  phase-1-local-api-boundary.md  phase-1-local-api-contract.json  phase-1-local-api-schemas.json  phase-1-validation-receipt-schema.md  release-policy.md  result-report-record.md  ui-and-cli.md
examples/: capability-record.json  local-batch.json  local-capability-record.json  local-node-identity.json  peer-heartbeats.json
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
scripts/: ci_quality_gates.py  full_test.py  mutmut_early_fail.py  release_metadata.py  release_policy.py  validate_api_contract.py  validate_api_schema_contract.py  validate_local_api_schema.py  validate_phase1_api_schema.py
tests/: test_aggregation.py  test_api_contract.py  test_api_errors.py  test_api_schema_contract.py  test_audit_inspection.py  test_capability_advertisement.py  test_capability_record.py  test_capability_record_inspection.py  test_ci_quality_gates.py  test_cli.py  test_cli_transport.py  test_contribution.py  test_contribution_record.py  test_contribution_store.py  test_dispatch.py  test_execution.py  test_expert_manifest.py  test_expert_manifest_identity.py  test_flow_audit.py  test_flow_verifier.py  test_full_test.py  test_identity.py  test_job_envelope.py  test_job_failure_schema.py  test_job_manifest.py  test_job_result_schema.py  test_json_io.py  test_ledger.py  test_lifecycle.py  test_local_audit_event.py  test_local_restart.py  test_local_runtime_config.py  test_local_shutdown.py  test_local_startup.py  test_local_transport.py  test_local_validation.py  test_message_bus.py  test_message_log.py  (+29 more)
(+149 files in other folders)
