[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aethermesh-core"
version = "0.1.0"
description = "Minimal local AetherMesh Core prototype."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
aethermesh-core = "aethermesh_core.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
branch = true
source = ["aethermesh_core"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "except .* as exc:",
  "raise .*Error",
  "raise ValueError",
  "parser.error",
  "return 1",
  "return 2",
]
