[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aethermesh"
version = "0.2.0a0"
description = "Minimal local AetherMesh Core prototype."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.26.8",
  "rich>=15.0.0",
]

[project.optional-dependencies]
ui = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
]
dev = [
  "httpx>=0.27",
]

[project.scripts]
aethermesh = "aethermesh_core.app_cli:app"
aethermesh-node = "aethermesh_core.app_cli:app"
aethermesh-core = "aethermesh_core.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.aethermesh.dependency_justifications]
"typer>=0.26.8" = "Provides the first-class installable aethermesh CLI without duplicating core node logic."
"rich>=15.0.0" = "Provides readable terminal status tables for the first-class local CLI."

[tool.coverage.run]
branch = true
source = ["aethermesh_core"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "except .* as exc:",
  "raise .*Error",
  "raise ValueError",
  "parser.error",
  "return 1",
  "return 2",
]

[tool.mutmut]
source_paths = ["src/aethermesh_core"]
also_copy = ["examples", "scripts"]
pytest_add_cli_args = ["-q", "tests"]
mutate_only_covered_lines = true
do_not_mutate = ["src/aethermesh_core/aggregation.py"]
